fixed spacing on the cart/order prices

--- a/css/account-checkout.css
+++ b/css/account-checkout.css
@@ -28,6 +28,10 @@
   margin: 0;
 }
 
+.order-summary .cart-total span {
+  margin-bottom: 0;
+}
+
 .item-container {
   padding: 0;
 }
@@ -398,10 +402,6 @@ th {
   }
   .complete-checkout .cart-total {
     flex-direction: column;
-  }
-
-  .cart-total span {
-    margin: 7px 0;
   }
 
   .complete-checkout .btn {
